--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,12 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.baseurl }}" class="btn">Home</a>
+        <a href="{{ site.github.page2 }}" class="btn">Chapter 2</a>
+        <a href="{{ site.github.page3 }}" class="btn">Chapter 3</a>
+        <a href="{{ site.github.page4 }}" class="btn">Chapter 4</a>
+        <a href="{{ site.github.page5 }}" class="btn">Chapter 5</a>
+        
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
