--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.baseurl }}">Home</a></li>
-           <li><a href="{{ site.github.page2 }}" class="buttons”>Chapter 2</a></li>
-         <li><a href="{{ site.github.page3 }}" class="buttons”>Chapter 3</a></li>
-        <li><a href="{{ site.github.page4 }}" class="buttons">Chapter 4</a></li>
-        <li><a href="{{ site.github.page5 }}" class="buttons">Chapter 5</a></li>
+          <li><a class="buttons" href="{{ site.github.page2 }}">Chapter 2</a></li>
+          <li><a class="buttons" href="{{ site.github.page3 }}">Chapter 3</a></li>
+          <li><a class="buttons" href="{{ site.github.page4 }}">Chapter 4</a></li>
+          <li><a class="buttons" href="{{ site.github.page5 }}">Chapter 5</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
