--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,12 @@
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.baseurl }}">Home</a></li>
-          <li><a class="buttons" href="{{ site.github.page2 }}">Chapter 2</a></li>
-          <li><a class="buttons" href="{{ site.github.page3 }}">Chapter 3</a></li>
-          <li><a class="buttons" href="{{ site.github.page4 }}">Chapter 4</a></li>
-          <li><a class="buttons" href="{{ site.github.page5 }}">Chapter 5</a></li>
+          <li><a class="buttons" href="{{ site.github.page2 }}">1.0 Corsi A1</a></li>
+          <li><a class="buttons" href="{{ site.github.page3 }}">1.1 L'alfabeto e pronuncia</a></li>
+          <li><a class="buttons" href="{{ site.github.page4 }}">1.2 I numeri</a></li>
+          <li><a class="buttons" href="{{ site.github.page5 }}">1.3 La settimana e i mesi</a></li>
+          <li><a class="buttons" href="{{ site.github.page6 }}">1.4 Salutare</a></li>
+          <li><a class="buttons" href="{{ site.github.page7 }}">1.5 Presentarsi e la nazionalita</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
