--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.baseurl }}">Home</a></li>
           <li><a class="buttons" href="{{ site.github.page2 }}">1.0 Corsi A1</a></li>
-          <li><a class="buttons" href="{{ site.github.page3 }}">1.1 L'alfabeto e pronuncia</a></li>
+          <li><a class="buttons" href="{{ site.github.page3 }}">1.1 L'alfabeto </a></li>
           <li><a class="buttons" href="{{ site.github.page4 }}">1.2 I numeri</a></li>
-          <li><a class="buttons" href="{{ site.github.page5 }}">1.3 La settimana e i mesi</a></li>
+          <li><a class="buttons" href="{{ site.github.page5 }}">1.3 La settimana </a></li>
           <li><a class="buttons" href="{{ site.github.page6 }}">1.4 Salutare</a></li>
-          <li><a class="buttons" href="{{ site.github.page7 }}">1.5 Presentarsi e la nazionalita</a></li>
+          <li><a class="buttons" href="{{ site.github.page7 }}">1.5 Presentarsi </a></li>
         </ul>
 
         {% if site.github.is_project_page %}
