--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,9 @@
 
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p> Please read our <a href="https://ml17485.github.io/sml209-final/tos.html">Terms of Use</a></p>               
+                            
+                            
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
