--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
     <![endif]-->
   </head>
   <body>
+     <div class="search-box-wrapper">
+            <input type="text" placeholder="Search..." class="search-box-input">
+            <button class="search-box-button">&#128269;</button>
+      </div>
     <div class="wrapper">
       <header>
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
