--- a/assets/css/search-box.css
+++ b/assets/css/search-box.css
@@ -21,7 +21,7 @@
     border: 0.2em solid #7e7;
     border-radius: 0 0.5em 0.5em 0;
     background-color: #7e7;
-    border-left: 0;
+    border-right: 0;
     padding: 0 0.75em;
     color: white;
     font-weight: bold;
