--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,17 @@
 ---
 
 @import "{{ site.theme }}";
+
+.btn2 {
+  border-radius: 4px;
+  background-color:#3a6186;
+  border: none;
+  color: red;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px;
+  width: auto;
+  cursor: pointer;
+  margin: 5px;
+}
+
