--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,8 @@
       </section>
 
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-        <p> Please read our <a href="https://ml17485.github.io/sml209-final/tos.html">Terms of Use</a></p>               
+        <p><small>Student ID: 171042470</small></p>
+        <p> Please read the <a href="https://ml17485.github.io/sml209-final/tos.html">Terms of Use</a></p>               
                             
                             
       </footer>
