--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.baseurl }}">Home</a></li>
-          <li><a class="buttons" href="{{ site.github.page2 }}">1.0 Corsi A1</a></li>
+          <li><a class="buttons" href="{{ site.github.page2 }}">1.0 Corso A1</a></li>
           <li><a class="buttons" href="{{ site.github.page3 }}">1.1 L'articoli </a></li>
           <li><a class="buttons" href="{{ site.github.page4 }}">1.2 I numeri</a></li>
           <li><a class="buttons" href="{{ site.github.page5 }}">1.3 La settimana </a></li>
